<resources>
    <string name="app_name">Projet</string>
    <string name="location_activity">Localisation</string>
    <string name="camera_activity">Open Camera</string>
    <string name="title_activity_second">secondActivity</string>
    <string name="title_activity_maps">Map</string>

    <string name="image">Prendre une photo</string>

    <string name="bienvenue">Bienvenue sur foot tracker</string>
    <string name="nouveauMatch">Nouveau match</string>
    <string name="ancienMatch">Voir les anciens matchs</string>


    <string name="stade">Stade</string>
    <string name="equipe1">Equipe 1 </string>
    <string name="formation">Formation : </string>
    <string name="equipe2">Equipe 2</string>
    <string name="arbitre">Arbitre</string>
    <string name="btn_add_match">Go ! </string>
    <string name="details">Détails du match</string>
    <string name="nomEquipe">Nom : </string>

    <string name="nomJoueur">Joueur </string>
    <string name="btn_add_joueur">Ajouter </string>
    <string name="commencerMatch">Commencer le match !</string>

    <string name="but">Buteur</string>
    <string name="passe">Passeur</string>
    <string name="jaune">Carton Jaune</string>
    <string name="rouge">Carton Rouge</string>
    <string name="finirMatch">Finir le match</string>

    <string name="resume">Mes derniers matchs</string>


</resources>
