<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f2f2f2"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/equipe1"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nomJoueur"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/nomJoueur1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="nom"
            android:inputType="text"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_equipe1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_joueur"
            android:textSize="35dp">

        </Button>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/equipe2"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/nomJoueur"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/nomJoueur2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="nom"
            android:inputType="text"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_equipe2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_joueur"
            android:textSize="35dp">

        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/match"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Commencer le match !"
        android:textSize="35dp"
        android:onClick="openActivity3">
    </Button>


</LinearLayout>

</LinearLayout>